--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,25 @@
-# Impostor-online-
-Impostor-online 
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inpostor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        canvas {
+            border: 1px solid black;
+        }
+    </style>
+</head>
+<body>
+    <h1>Witaj w grze Inpostor!</h1>
+    <canvas id="gameCanvas" width="600" height="400"></canvas>
+
+    <!-- Podłączamy plik JS -->
+    <script src="Game.js"></script>
+</body>
+</html>
